# MysqlInterface

./: CMakeLists.txt  main.cpp
Default/: config.ini
Source/: config.h
Source/Mysql/: Mysql.cpp  Mysql.h
Source/Server/: Server.cpp  Server.h  Socket.cpp  Socket.h
Source/Util/: Util.cpp  Util.h
Source/Util/Sha256/: Sha256.cpp  Sha256.h
